--- a/beta/index.html
+++ b/beta/index.html
@@ -30,15 +30,13 @@
 
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
-                        <li><a href='diff_renovate/actions-setup-python-5.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-setup-python-5.x</a></li>
-
-                        <li><a href='diff_renovate/codespell-project-codespell-2.x.html'>Unified diff core:dev vs beta:origin/renovate/codespell-project-codespell-2.x</a></li>
-
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                         <li><a href='diff_test-coord-2.html'>Unified diff core:dev vs beta:origin/test-coord-2</a></li>
+
+                        <li><a href='diff_zeroconf.html'>Unified diff core:dev vs beta:origin/zeroconf</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
